# git_defaults

./: .pre-commit-config.yaml  setup.cfg
